--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reown/appkit": "^1.6.0",
+    "@reown/appkit-adapter-ethers": "^1.6.0",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/modal-sign-react": "^2.7.0",
     "@walletconnect/sign-client": "^2.17.2",
     "@walletconnect/utils": "^2.17.2",
+    "ethers": "^6.13.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
