--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.2.4",
     "@reown/appkit": "^1.6.0",
     "@reown/appkit-adapter-ethers": "^1.6.0",
     "@walletconnect/modal": "^2.7.0",
