--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reown/appkit": "^1.6.0",
     "@reown/appkit-adapter-ethers": "^1.6.0",
     "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/modal-sign-html": "^2.7.0",
     "@walletconnect/modal-sign-react": "^2.7.0",
     "@walletconnect/sign-client": "^2.17.2",
     "@walletconnect/utils": "^2.17.2",
